--- a/docs/main.tex
+++ b/docs/main.tex
@@ -92,14 +92,14 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
-  pdftitle={YOUR TITLE HERE},
-  pdfauthor={YOUR NAME HERE},
+  pdftitle={Estattśitica e Probabilidade para Finanças},
+  pdfauthor={Igo da Costa Andrade},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
 
-\title{YOUR TITLE HERE}
-\author{YOUR NAME HERE}
-\date{2023-06-01}
+\title{Estattśitica e Probabilidade para Finanças}
+\author{Igo da Costa Andrade}
+\date{2023-06-06}
 
 \begin{document}
 \maketitle
@@ -114,14 +114,30 @@
 \section*{Informações preliminares}\label{informauxe7uxf5es-preliminares}}
 \addcontentsline{toc}{section}{Informações preliminares}
 
-\hypertarget{primeiro-capuxedtulo}{%
-\section{Primeiro capítulo}\label{primeiro-capuxedtulo}}
+Resolução dos laboratórios \texttt{R} do curso \textbf{\emph{Statistics and Probability for Economics and Finance} (SPEF)} (\url{https://bookdown.org/michela_cameletti/spef2223rlabs/}) ministrado por ministrado pelo Prof.~Raffaele Argiento, Prof.~Michela Cameletti e Prof.~Tommaso Lando da University of Bergamo.
 
-\hypertarget{primeira-seuxe7uxe3o-do-capuxedtulo-1}{%
-\subsection{Primeira seção do capítulo 1}\label{primeira-seuxe7uxe3o-do-capuxedtulo-1}}
+\hypertarget{comandos-buxe1sicos-para-programauxe7uxe3o-com-r}{%
+\section{\texorpdfstring{Comandos básicos para programação com \texttt{R}}{Comandos básicos para programação com R}}\label{comandos-buxe1sicos-para-programauxe7uxe3o-com-r}}
 
-\hypertarget{primeira-subseuxe7uxe3o-do-capuxedtulo-1}{%
-\subsubsection{Primeira subseção do capítulo 1}\label{primeira-subseuxe7uxe3o-do-capuxedtulo-1}}
+\hypertarget{laboratuxf3rio-de-exercuxedcios-1}{%
+\subsection{Laboratório de Exercícios 1}\label{laboratuxf3rio-de-exercuxedcios-1}}
+
+\hypertarget{exercuxedcio-1}{%
+\subsubsection{Exercício 1}\label{exercuxedcio-1}}
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\item
+  Calcule \(exp\left(3 - \dfrac{4}{5}\right) + \dfrac{\sqrt{3 + 2^5}}{4 - 7 \cdot \log{(10)}}\).
+\item
+  Crie o vetor chamado \texttt{x} que contém os seguintes valores \(\left(10, \log{(0,2)}, 6/7, \sqrt{(54)}, -0,124\right)\).
+\end{enumerate}
+
+\begin{itemize}
+\tightlist
+\item
+  Encontre o comprimento de \texttt{x}.
+\end{itemize}
 
 \hypertarget{a-caucus-race-and-a-long-tale}{%
 \section{A caucus-race and a long tale}\label{a-caucus-race-and-a-long-tale}}
